<resources>
    <string name="app_name">KD Petshop</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="kd_petshop_logo">KD Petshop Logo</string>
    <string name="username_email">Username / Email</string>
    <string name="lorem_ipsum_com">lorem@ipsum.com</string>
    <string name="password">Password</string>
    <string name="password_hint">**********</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_account">Don\'t have an Account ? Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>

    <string name="error_empty_username">"Username can't be Empty"</string>
    <string name="error_empty_password">"Password can't be Empty"</string>
    <string name="error_length_username">"Username must greater than 6"</string>
    <string name="error_length_password">"Password must greater than 6"</string>
    <string name="adopt_pet">Adopt Pet</string>
    <string name="about_us">About Us</string>
    <string name="copyright_of_kd_petshop">Copyright of KD PetShop</string>
    <string name="kd_petshop">KD PetShop</string>
    <string name="about_us_desc">Kami Adalah perusahaan yang berfokus pada bidang adopsi hewan. Tidak hanya itu, kami juga menawarkan beberapa jasa seperti penginapan hewan, dan jual beli aksesoris dan makanan hewan</string>
    <string name="desc_penginapan">Kami menawarkan jasa penginapan hewan dengan berbagai macam fasilitas, jaminan, dan program yang menarik sekaligus mendidik untuk hewan kesayangan Anda.</string>
    <string name="image_penginapan">Image Penginapan</string>
    <string name="desc_aksesoris_1">Kami juga menjual berbagai mainan dan aksesoris dari berbagai brand dengan harga dan kualitas yang bervarisasi untuk hewan kesayangan anda.</string>
    <string name="image_dog_walking">Image Dog Walking</string>
    <string name="desc_aksesoris_2">Kami juga menyediakan jasa perawatan hewan kesayangan anda seperti grooming, mandi anti jamur dan kutu, serta perawatan lainnya yang dibutuhkan hewan peliharaan anda.</string>
    <string name="logo_pets">Logo Pets</string>
    <string name="race">Race :</string>
    <string name="age">Age :</string>
    <string name="sex">Sex :</string>
    <string name="detail">Detail</string>
    <string name="_62">+62</string>
    <string name="adopt">Adopt</string>

</resources>
