<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kd_petshop"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/about_us_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_penginapan"
            android:scaleType="fitXY"
            android:src="@drawable/penginapan_min" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCream"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/desc_penginapan"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_dog_walking"
            android:scaleType="fitXY"
            android:src="@drawable/aksesoris1_min" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSoftYellow"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/desc_aksesoris_1"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/image_dog_walking"
            android:scaleType="fitXY"
            android:src="@drawable/aksesoris2_min" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCream"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/desc_aksesoris_2"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/copyright_of_kd_petshop" />


    </LinearLayout>

</ScrollView>